objects/WT_Funds_Groups__c.object
<CustomObject>
    <fields>
        <fullName>WT_Controlling_Party__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Controlling Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Funds_Management_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funds Management Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.WT_Funds_Management_Company__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funds Groups (Funds Management Company)</relationshipLabel>
        <relationshipName>Funds_Groups2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_MSD_Record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MSD Record ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Third_Party_Funds_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party Funds Administrator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.WT_Third_Party_Funds_Administrator__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funds Groups (Third Party Funds Administrator)</relationshipLabel>
        <relationshipName>Funds_Groups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_WFG_Acceptable_Exchanges__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WFG Acceptable Exchanges</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_WFG_Asset_Class__c</fullName>
        <label>WFG Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commodities</fullName>
                </value>
                <value>
                    <fullName>Crypto</fullName>
                </value>
                <value>
                    <fullName>Life Settlements</fullName>
                </value>
                <value>
                    <fullName>Private Credit</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Securities</fullName>
                </value>
                <value>
                    <fullName>Tax Liens</fullName>
                </value>
                <value>
                    <fullName>Venture Capital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_WFG_BSA_Approval_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WFG BSA Approval Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_WFG_Fund_AUM__c</fullName>
        <label>WFG Fund AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_WFG_Fund_Strategy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WFG Fund Strategy</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_WFG_OtherCrypto_BSA_Approval_Requeste__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WFG Other/Crypto BSA Approval Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_WFG_Purpose_of_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WFG Purpose of Account</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Wintrust_Funds_Alternative_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wintrust Funds Alternative Fund</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FinServ__FinancialAccount__c.FinServ__PrimaryOwner__c</field>
                <operation>equals</operation>
                <valueField>$Source.WT_Wintrust_Funds_Client__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Funds Groups</relationshipLabel>
        <relationshipName>Funds_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Wintrust_Funds_Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Wintrust Funds Client</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.WT_Wintrust_Funds_Client__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funds Groups(Wintrust Funds Client)</relationshipLabel>
        <relationshipName>Funds_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Funds Groups</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_Wintrust_Funds_Client__c</columns>
        <columns>WT_Wintrust_Funds_Alternative_Fund__c</columns>
        <columns>WT_Third_Party_Funds_Administrator__c</columns>
        <columns>WT_Funds_Management_Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Funds Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>